add mongodb docker-compose

--- a/mongodb/conf/mongod.cfg
+++ b/mongodb/conf/mongod.cfg
@@ -5,7 +5,7 @@
 
 # Where and how to store data.
 storage:
-  dbPath: /data/db
+  dbPath: C:\ProgramData\mongodb\data
   journal:
     enabled: true
 #  engine:
@@ -15,7 +15,7 @@ storage:
 systemLog:
   destination: file
   logAppend: true
-  path:  /data/log/mongod.log
+  path:  C:\ProgramData\mongodb\log\mongod.log
 
 # network interfaces
 net:
