--- a/compose.yaml
+++ b/compose.yaml
@@ -1,20 +1,18 @@
-# Use root/example as user/password credentials
-version: '3.1'
+version: "3.1"
 
 services:
-
   mongo:
     image: mongo
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
-    ports:
-      - 27018:27017
     volumes:
-      - ./db/data:/data/db
-      - ./db/config:/data/configdb
-      - ./db/log:/data/log
+      - ./mongodb/data:/data/db
+      - ./mongodb/conf:/data/configdb
+      - ./mongodb/log:/var/log/mongodb
+    ports: 
+      - "27018:27017"
 
   mongo-express:
     image: mongo-express
@@ -24,4 +22,4 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27018/
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
