--- a/src/server/.vscode/launch.json
+++ b/src/server/.vscode/launch.json
@@ -3,5 +3,21 @@
     // 悬停以查看现有属性的描述。
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+      {
+        "name": "Launch test function",
+        "type": "go",
+        "request": "launch",
+        "mode": "debug",
+        "program": "${workspaceFolder}",
+        "args": [
+          // "-test.run",
+          // test function name
+          // * can use reguler expression
+          // * NOT include "Test"
+          // * the first charactor MUST be small
+          // "bubblesort"
+        ]
+      }
+    ]    
 }
