--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Lint Go Code
         run: |
           cd src
+          cd server
           golangci-lint run
 
   build:
@@ -45,6 +46,7 @@ jobs:
           GOPROXY: "https://proxy.golang.org"
         run: |
           cd src
+          cd server
           go build .
 
   test:
@@ -57,4 +59,5 @@ jobs:
           GOPROXY: "https://proxy.golang.org"
         run: |
           cd src
+          cd server
           go test -v ./rest
